HERO: Made the cta buttons unvisible first. When the js code got loaded it will display the correct one.

--- a/public/styles/hero.css
+++ b/public/styles/hero.css
@@ -66,6 +66,7 @@
   justify-content: space-around;
   align-items: center;
   width: 90%;
+  display: none;
 }
 .hero-cta button{
   min-height: 3em;
